# my-auth

./: README.md  pyproject.toml
.omo/drafts/: fastapi-adapter.md
.omo/plans/: fastapi-adapter.md
src/my_auth/: __init__.py  challenges.py  credentials.py  fastapi.py  passkeys.py  sqlalchemy_store.py  sqlite_schema.py  stores.py  testing.py
src/my_auth/fastapi_htmx/: __init__.py  config.py  router.py  static.py  templates.py
src/my_auth/fastapi_htmx/static/: passkey-ui.css  passkey-ui.js  passkey.js
src/my_auth/fastapi_htmx/templates/: _login_panel.html  _passkey_status.html  _register_panel.html  base.html  login.html  register.html
src/my_auth/static/: passkey.js
tests/: test_fastapi_adapter.py  test_fastapi_htmx_adapter.py  test_guarded_deletion.py  test_passkeys.py  test_sqlite_credential_store.py  test_store_contracts.py  test_stores.py  test_v02_contracts.py
