[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-auth"
version = "0.3.1"
description = "Minimal reusable passkey helpers for Python web apps"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikolaj" }]
dependencies = [
  "webauthn>=2.2,<3",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115"]
fastapi-htmx = ["app-factory[fastapi]>=0.4", "fastapi>=0.115", "jinja2>=3.1"]

[tool.uv.sources]
app-factory = { git = "https://github.com/mikolaj92/app-factory", rev = "4d39f7cc069433614bf04445b7b43832594a4aa6" }

[dependency-groups]
dev = [
  "app-factory[fastapi]>=0.4",
  "fastapi>=0.115",
  "basedpyright>=1.21",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pytest>=8",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/my_auth"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
