[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-auth"
version = "0.1.0"
description = "Minimal reusable passkey helpers for Python web apps"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikolaj" }]
dependencies = [
  "webauthn>=2.2,<3",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115"]
fastapi-htmx = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "app-factory[fastapi] @ git+https://github.com/mikolaj92/app-factory@6de1478186c4d240b0fb9803f07dbc65d12908ea",
]

[dependency-groups]
dev = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "app-factory[fastapi] @ git+https://github.com/mikolaj92/app-factory@6de1478186c4d240b0fb9803f07dbc65d12908ea",
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_auth"]
